# kudos

./: .gitignore  COPYING  LICENSE  Makefile  README.rst  STYLE  STYLE.md  STYLE.rst  run_qemu.sh  yams.conf
docs/: README.rst  advanced-synchronization.rst  appendix.rst  booting-kudos-in-yams.rst  bootstrapping-kudos.rst  builtin-drivers.rst  code-overview.rst  conf.py  device-drivers.rst  filesystems.rst  how-kudos-bootstraps.rst  index.rst  introduction.rst  kernel-overview.rst  kernel-threads.rst  low-level-synchronization.rst  source-code-overview.rst  synchronization.rst  system-calls.rst  tfs.eps  threads.rst  trivial-filesystem.rst  usage.rst  userland-processes.rst  using-kudos.rst  virtual-filesystem.rst  virtual-memory.rst
docs/appendix/: tfstool.rst
docs_x86_64/: Makefile  advanced-synchronization.rst  builtin-drivers.rst  contexts-and-context-switching.rst  index.rst  make.bat  source-code-overview.rst  tfs.fig  threads.rst  userland-processes.rst  using-kudos.rst
kudos/: .gitignore  COPYING  Makefile  depend.sh  ldmips32.script  ldx86_64.script
kudos/drivers/: bootargs.c  bootargs.h  device.h  disk.h  disksched.c  disksched.h  drivers.h  gbd.h  gcd.h  gnd.h  metadev.h  module.mk  modules.c  modules.h  polltty.h  timer.c  timer.h
kudos/drivers/mips/: _disk.h  device.c  disk.c  polltty.c
kudos/drivers/mips32/: _disk.h  _timer.S  arch.h  disk.c  drivers.c  metadev.c  module.mk  polltty.c  subsys.mk  tty.c  tty.h
kudos/drivers/x86_64/: _disk.S  _disk.h  _kb.S  _timer.S  arch.h  device.c  disk.c  keyboard.c  keyboard.h  metadev.c  module.mk  pci.c  pci.h  pit.c  pit.h  polltty.c  subsys.mk  tty.c  tty.h
kudos/fs/: filesystems.c  filesystems.h  module.mk  tfs.c  tfs.h  tfs_constants.h  vfs.c  vfs.h
kudos/init/: common.c  common.h  module.mk
kudos/init/mips/: _boot.S  main.c  module.mk
kudos/init/mips32/: _boot.S  main.c  module.mk
kudos/init/x86_64/: _boot.S  main.c  module.mk
kudos/kernel/: assert.h  config.h  halt.c  halt.h  idle.h  interrupt.h  klock.c  klock.h  module.mk  panic.c  panic.h  scheduler.c  scheduler.h  semaphore.c  semaphore.h  sleepq.c  sleepq.h  spinlock.h  stalloc.c  stalloc.h  subsys.mk  synch.h  thread.c  thread.h  types.h
kudos/kernel/mips/: _cswitch.S  _interrupt.S  _spinlock.S  cswitch.c  cswitch.h  exception.h  idle.S  irq.h  module.mk
kudos/kernel/mips32/: _cswitch.S  _interrupt.S  _spinlock.S  _thread.h  asm.h  cswitch.h  exception.c  exception.h  interrupt.c  irq.h  subsys.mk
kudos/kernel/x86_64/: _cswitch.S  _irq.S  _spinlock.c  _thread.h  cswitch.c  cswitch.h  exception.c  exception.h  gdt.c  gdt.h  idt.c  idt.h  interrupt.c  irq.h  pic.c  pic.h  spinlock.S  stubs.c  subsys.mk  tss.c  tss.h
kudos/lib/: bitmap.c  bitmap.h  debug.c  debug.h  libc.c  libc.h  module.mk  registers.h  types.h  xprintf.c
kudos/lib/gcc/: divdi3.c  qdivrem.c  quad.h  subsys.mk  udivdi3.c  umoddi3.c
kudos/lib/mips/: module.mk  rand.S  types.h
kudos/lib/mips32/: module.mk  registers.h  types.h
kudos/lib/x86_64/: _asm.S  asm.c  asm.h  multiboot.h  srand.c  subsys.mk  types.h
kudos/proc/: elf.c  elf.h  module.mk  process.c  process.h  syscall.c  syscall.h
kudos/proc/mips/: _proc.c  exception.c  module.mk
kudos/proc/mips32/: _syscall.c  elf_info.h  subsys.mk
kudos/proc/x86_64/: _proc.c  _sys.S  _syscall.c  elf_info.h  subsys.mk
kudos/util/: subsys.mk  tfstool.c  tfstool.h
kudos/vm/: memory.c  memory.h  mm_heap.c  module.mk
kudos/vm/mips/: _tlb.S  mem.h  mm_phys.c  mm_virt.c  module.mk  tlb.c  tlb.h
kudos/vm/mips32/: _tlb.S  mem.h  mm_phys.c  mm_virt.c  pagetable.h  subsys.mk  tlb.c  tlb.h
kudos/vm/x86_64/: mem.h  mm_phys.c  mm_virt.c  pagetable.h  subsys.mk
qemu/grub/iso/boot/grub/: grub.cfg
tools/: .gitignore  README.md  check_comments.py  check_include_guards.py  findTralingWhitespace.fsx  osm-install-gen.sh  yams-files  yams-init  yams-sim  yams-term  yams-tfs
userland/: .gitignore  Makefile  halt.c  hw.c  lib.c  lib.h  oldshell.c  shell.c
userland/mips/: _syscall.S  crt.S  ld.userland.script
userland/mips32/: _syscall.S  crt.S  ld.userland.script
userland/x86_64/: _syscall.S  crt.S  ld.userland.script
yams/: .gitignore  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  configure  configure.ac  makeintformat.c  mkinstalldirs
yams-1.4.1/: AUTHORS  CHANGES  ChangeLog  config.h.in  configure  semtest.c
yams-1.4.1/info/: Makefile.am  cp0.texi  cpu.texi  gdb.texi  io.texi  yams.ps  yams.texi
yams-1.4.1/man/: yams.1
yams-1.4.1/src/: Makefile.am  Makefile.in  cfg-lexer.c  cfg-parser.h  cfg.c  cp0.h  cpu.h  device.h  disasm.h  disk.h  dummy.c  dummy.h  gdb.c  gdb.h  hwcons-lex.l  hwcons.c  hwcons.y  hwconsole.c  io.h  memory.c  misc.c  nic.c  nic.h  opcodes.h  plugio.c  simulator.c  trivial_io.c  tty.c  version.c
yams/info/: .gitignore  Makefile.in  cross-gcc.texi  memory.texi  stamp-vti  yams.info
yams/man/: ChangeLog  Makefile.am  Makefile.in  yamst.1
yams/src/: .gitignore  ChangeLog  async_input.c  async_input.h  cfg-lexer.c  cfg-lexer.l  cfg-parser.c  cfg-parser.h  cfg-parser.y  cfg.c  cfg.h  cp0.c  cpu.c  cpu.h  cpu_defs.h  cpuregs.h  device.c  disasm.c  disk.c  elf.c  elf.h  gdb.c  hwcons-lex.c  hwcons-lex.l  hwcons.c  hwcons.h  hwcons.y  hwconsole.c  hwconsole.h  includes.h  memory.h  misc.h  plugio.h  simulator.h  trivial_io.c  trivial_io.h  tty.h  yams.c  yams.conf  yamst.c
